--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,34 @@
 {
   "db_path": "memories.db",
   "gemini_api_key": "YOUR_GEMINI_API_KEY",
-  "webcal_url": "webcal://p12-caldav.icloud.com/published/2/MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI",
+  "location_name": "Helsinki",
+  "latitude": 60.1699,
+  "longitude": 24.9384,
+  "timezone": "Europe/Helsinki",
+  "calendars": [
+    {
+      "name": "Family Calendar",
+      "url": "webcal://p12-caldav.icloud.com/published/2/MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI"
+    },
+    {
+      "name": "Work Calendar",
+      "url": "webcal://example.com/work-calendar.ics"
+    }
+  ],
+  "family": [
+    {
+      "name": "Matti",
+      "birthday": "1980-05-15",
+      "telegram_id": "matti_v"
+    },
+    {
+      "name": "Maija",
+      "birthday": "1982-11-22"
+    },
+    {
+      "name": "Pekka",
+      "birthday": "2010-01-30"
+    }
+  ],
   "output_format": "cli"
 }
