--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,8 @@
 {
   "db_path": "memories.db",
   "gemini_api_key": "YOUR_GEMINI_API_KEY",
+  "outputLanguage": "Finnish",
+  "promptFilePath": "prompts.json",
   "location_name": "Helsinki",
   "latitude": 60.1699,
   "longitude": 24.9384,
