--- a/config.example.json
+++ b/config.example.json
@@ -41,15 +41,10 @@
   ],
   "output_format": "cli",
   "outputs": {
-    "enable_cli": true,
-    "discord_webhook_urls": [
-      "https://discord.com/api/webhooks/your-webhook-id/your-webhook-token"
-    ],
-    "telegram_bots": [
-      {
-        "bot_token": "YOUR_TELEGRAM_BOT_TOKEN",
-        "chat_id": "YOUR_TELEGRAM_CHAT_ID"
-      }
-    ]
-  }
+    "enable_cli": true
+  },
+  "water_quality_locations": [
+    { "name": "Hietaniemi" },
+    { "name": "Piraeus" }
+  ]
 }
