--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -153,7 +153,7 @@ tasks:
     desc: Import water quality data (requires --location and --quality flags)
     deps: [build]
     cmds:
-      - "{{.BINARY}} import-water-quality --location=\"$LOCATION\" --quality=\"$QUALITY\""
+      - '{{.BINARY}} import-water-quality --location="$LOCATION" --quality="$QUALITY"'
 
   generate-brief:
     desc: Generate a daily brief
@@ -179,7 +179,7 @@ tasks:
         {{if .RELEVANCE_DATE}}--relevance-date="$RELEVANCE_DATE"{{end}}
         {{if .SOURCE}}--source="$SOURCE"{{end}}
 
-  release:
+  publish:
     desc: Deploy binary to remote server (requires RELEASE_SERVER and RELEASE_PATH in .env)
     deps: [build-linux]
     cmds:
