--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,6 +6,19 @@ vars:
   COVERAGE_DIR: coverage
   BINARY: "{{.BUILDDIR}}/{{.FUNCNAME}}"
   CMD_PATH: ./cmd/hovimestari
+  # VERSION dynamically extracts from git tags and commits:
+  # - If tags exist: "v1.0.0-abc1234" (tag + commit hash)
+  # - No tags: "dev-2025-12-18_14:30:00" (timestamped dev build)
+  # - Injected into Go binaries via -ldflags="-X main.Version={{.VERSION}}"
+  VERSION:
+    sh: |
+      tag=$(git describe --tags 2>/dev/null || echo "dev")
+      commit=$(git log -n 1 --format=%h)
+      if [ "$tag" = "dev" ]; then
+        echo "dev-$(date '+%Y-%m-%d_%H:%M:%S')"
+      else
+        echo "$tag-$commit"
+      fi
 
 # Load environment variables from .env files if they exist
 # Order matters: later files override earlier ones.
@@ -30,7 +43,7 @@ tasks:
       - mkdir -p {{.BUILDDIR}}
       - >
         go build
-        -ldflags="-X main.Version={{.GIT_COMMIT}} -w -s"
+        -ldflags="-X main.Version={{.VERSION}} -w -s"
         -o {{.BINARY}} {{.CMD_PATH}}
     generates:
       - "{{.BINARY}}"
@@ -38,9 +51,6 @@ tasks:
       - "{{.CMD_PATH}}/**/*.go"
       - "internal/**/*.go"
       - "go.mod"
-    vars:
-      GIT_COMMIT:
-        sh: git rev-parse --short HEAD
 
   build-linux:
     desc: Build the Go application for Linux AMD64
@@ -52,7 +62,7 @@ tasks:
       - mkdir -p {{.BUILDDIR}}
       - >
         GOOS=linux GOARCH=amd64 go build
-        -ldflags="-X main.Version={{.GIT_COMMIT}} -w -s"
+        -ldflags="-X main.Version={{.VERSION}} -w -s"
         -o {{.BINARY}}-linux-amd64 {{.CMD_PATH}}
     generates:
       - "{{.BINARY}}-linux-amd64"
@@ -60,9 +70,6 @@ tasks:
       - "{{.CMD_PATH}}/**/*.go"
       - "internal/**/*.go"
       - "go.mod"
-    vars:
-      GIT_COMMIT:
-        sh: git rev-parse --short HEAD
 
   test:
     desc: Run Go tests
@@ -154,6 +161,19 @@ tasks:
     deps: [build]
     cmds:
       - '{{.BINARY}} import-water-quality --location="$LOCATION" --quality="$QUALITY"'
+
+  import-school-lunch:
+    desc: Import school lunch menus
+    deps: [build]
+    cmds:
+      - "{{.BINARY}} import-school-lunch"
+
+  import-all:
+    desc: Run all automated imports (calendar, weather, school lunch)
+    cmds:
+      - task: import-calendar
+      - task: import-weather
+      - task: import-school-lunch
 
   generate-brief:
     desc: Generate a daily brief
